--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.12.0",
     "next": "latest",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,6 +32,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/node": "^18.15.3",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
