--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.12.0",
+    "cors": "^2.8.5",
     "next": "latest",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/cors": "^2.8.13",
     "@types/node": "^18.15.3",
     "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.28",
