--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.12.0",
     "cors": "^2.8.5",
+    "fuse.js": "^6.6.2",
     "next": "latest",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
