--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "fuse.js": "^6.6.2",
     "next": "latest",
+    "nodemailer": "^6.9.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -35,6 +36,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/cors": "^2.8.13",
     "@types/node": "^18.15.3",
+    "@types/nodemailer": "^6.4.7",
     "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
