--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cypress:run": "start-server-and-test 'pnpm run start:test' 3000 'dotenv -e .env.test.local cypress run'"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.5",
     "@prisma/client": "^4.11.0",
     "@supabase/auth-helpers-nextjs": "^0.5.6",
     "@supabase/auth-helpers-react": "^0.3.1",
@@ -64,5 +65,10 @@
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
